Convert CSS  =>  SASS. Use variables and mixins

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,9 +1,9 @@
 /*================================================ FOOTER SECTION ===================*/
 #timeHolder{
-	color:#2185C4;
+	color:$blue;
 }
 
 .snowStatsHolder, #waterStatsHolder{
-	color:#2185C4;
-	font-family:josefinBold, Helvetica, Arial, sans-serif;
+	color:$blue;
+	font-family:$josefin-bold;
 }
