--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,6 +17,9 @@ Text Domain: snowtap
 @import 'components/global';
 @import 'components/_nav';
 @import 'components/_fma';
+@import 'components/_snowflake';
+@import 'components/_cloud';
+@import 'components/_mountain';
 @import 'components/_sections';
 @import 'components/_footer';
 
@@ -25,6 +28,4 @@ Text Domain: snowtap
 @import 'components/_r-desktop-15';
 @import 'components/_r-tablet-977';
 @import 'components/_r-mobile-767';
-
-
 
