--- a/src/sass/components/_r-mobile-767.scss
+++ b/src/sass/components/_r-mobile-767.scss
@@ -1,5 +1,5 @@
 /* MOBILE STYLES ////////////////////////////////////////////////////////////////////////////////////////////////*/
-@media only screen and (max-width: 767px){
+@media only screen and (max-width: $tablet-width-max){
 .hideForMobile{
 	display:none;
 }
@@ -22,16 +22,13 @@
 }
 
 #extendBrowser{
-	color:#3E454C;
+	color:$off-black;
 	font-size: 18px;
 	position: absolute;
 	text-align: center;
 	top:50%;
 	left:50%;
-	transform:translate(-50%,-50%);
-	-o-transform:translate(-50%,-50%);
-	-webkit-transform:translate(-50%,-50%);
-	-moz-transform:translate(-50%,-50%);	
+	@include transform( translate(-50%,-50%) );
 }
 
 #minimizeBrowser{
