--- a/src/sass/components/variables.scss
+++ b/src/sass/components/variables.scss
@@ -2,35 +2,44 @@
 						VARIABLES
 ///////////////////////////////////////////////////////////*/
 
-$white: #FFFFFF;
 $black: #000000;
+$white: #FFFFFF;
 
-$primaryColor: #244343;
-// $secondaryColor: #244343;
+$blue: #2185C4;
+$off-black: #3E454C;
 
-$gray1: #EEEEEE;
-$gray2: #B7B5B2;
-$gray3: #807E82;
-
-$red: #993741;
-$orange: #E88641;
-$yellow: #EEB111;
-$green: #859E62;
-$blue: #2F5E78;
-// $purple: #2F5E78;
-
+// $gray1: #EEEEEE;
+// $gray2: #B7B5B2;
+// $gray3: #807E82;
 
 $light: 300;
 $semibold: 500;
 $bold: 700;
 
 
+/* FONTS */
+$josefin-bold:'josefinBold', Helvetica, Arial, sans-serif;
+$josefin-semi:'josefinSemibold', Helvetica, Arial, sans-serif;
+$josefin-reg: 'josefinRegular', Helvetica, Arial, sans-serif;
+
+$arborcrest: 'arborcrestHeavy', Helvetica, Arial, sans-serif;
+
 /* WIDTHS */
 $max-width: 1220px; /* CONTENT CONTAINER MAX WIDTH */
 $min-width: 325px;
 
-$mobile-width: 550px;
+$beyond-width: 2600px;
+$xtra-width: 2300px;
+$large-width: 1500px;
+$desktop-width: 978px;
 $tablet-width: 768px;
-$desktop-width: 1080px;
+$mobile-width: 550px;
+
+$beyond-width-max: #{ $beyond-width } - 1;
+$xtra-width-max: #{ $xtra-width } - 1;
+$large-width-max: #{ $large-width } - 1;
+$desktop-width-max: #{ $desktop-width } - 1;
+$tablet-width-max: #{ $tablet-width } - 1;
+$mobile-width-max: #{ $mobile-width } - 1;
 
 $baseFontSize: 14px; /* Henseforth known as 1em  |  used for em() mixin */
