--- a/src/sass/components/variables.scss
+++ b/src/sass/components/variables.scss
@@ -2,11 +2,26 @@
 						VARIABLES
 ///////////////////////////////////////////////////////////*/
 
+/* COLORS */
+
+/* RGB VALUES
+DARK BLUE
+background-color:rgba(33,133,196,1);
+
+LIGHT BLUE
+background-color:rgba(133,203,240,1)
+
+TAP BLACK
+background-color:rgba(62,69,76,1)
+*/
+
 $black: #000000;
 $white: #FFFFFF;
 
 $blue: #2185C4;
 $off-black: #3E454C;
+
+
 
 // $gray1: #EEEEEE;
 // $gray2: #B7B5B2;
