--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,6 +20,7 @@ Text Domain: snowtap
 @import 'components/_cloud';
 @import 'components/_mountain';
 @import 'components/_sections';
+@import 'components/_hidden-content';
 @import 'components/_footer';
 
 @import 'components/_r-beyond';
